--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,23 @@
-[package]
-name = "snakeway"
-version = "0.1.0"
-edition = "2024"
+[workspace]
+members = ["snakeway"]
+resolver = "2"
 
-[dependencies]
-config = "0.15.19"
-tracing-subscriber = "0.3.22"
-tracing = "0.1.43"
+[profile.dev]
+opt-level = 0
+
+[profile.release]
+opt-level = 3               # Maximize performance
+lto = "fat"                 # Link-time optimization
+codegen-units = 1           # More aggressive optimization by reducing parallelism
+panic = "abort"             # Reduce panic handling code
+debug = 1               # Disable debug info
+strip = true                # Remove debug symbols
+incremental = false         # Ensure no incremental compilation
+
+
+[workspace.dependencies]
+config = "0.15"
+tracing-subscriber = "0.3"
+tracing = "0.1"
 pingora = "0.6"
 pingora-core = "0.6"
