Squashed commit of the following:
commit c0b43e03ce2dcebb796e89b90f58e70dc07fffea
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Thu Dec 11 14:36:01 2025 -0500

    Add GitHub Actions workflow for CI/CD pipeline

commit a7a81d7b31852ab079721fa37598955a2eaa6471
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Thu Dec 11 14:29:51 2025 -0500

    Add contribution guidelines and Justfile helpers for building

commit a01859171200daa2c6584e33689603bd3b1310d5
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Thu Dec 11 13:49:53 2025 -0500

    Add a basic reverse proxy setup with 1 upstream

commit 153861f8475b84cca20a750a38058bdf525c7ccb
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Thu Dec 11 13:24:15 2025 -0500

    Add a basic logging setup

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,14 +10,17 @@ opt-level = 3               # Maximize performance
 lto = "fat"                 # Link-time optimization
 codegen-units = 1           # More aggressive optimization by reducing parallelism
 panic = "abort"             # Reduce panic handling code
-debug = 1               # Disable debug info
-strip = true                # Remove debug symbols
 incremental = false         # Ensure no incremental compilation
 
 
 [workspace.dependencies]
+
+anyhow = "1.0"
+async-trait = "0.1"
+clap = "4.5"
 config = "0.15"
-tracing-subscriber = "0.3"
-tracing = "0.1"
+log = "0.4"
 pingora = "0.6"
-pingora-core = "0.6"
+serde = { version = "1.0", features = ["derive"] }
+toml = "0.9"
+tracing-subscriber = "0.3"
