--- a/snakeway/Cargo.toml
+++ b/snakeway/Cargo.toml
@@ -4,9 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-
-config = { workspace = true }
-tracing-subscriber = { workspace = true }
-tracing = { workspace = true }
-pingora = { workspace = true }
-pingora-core = { workspace = true }
+anyhow = { workspace = true }
+async-trait = { workspace = true }
+clap = { workspace = true, features = ["derive"] }
+log = { workspace = true }
+pingora = { workspace = true, features = ["proxy"] }
+serde = { workspace = true }
+toml = { workspace = true }
+tracing-subscriber = { workspace = true , features = ["fmt", "json", "env-filter"]}
