--- a/snakeway/Cargo.toml
+++ b/snakeway/Cargo.toml
@@ -6,9 +6,13 @@ edition = "2024"
 [dependencies]
 anyhow = { workspace = true }
 async-trait = { workspace = true }
+bytes = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
+http = { workspace = true }
 log = { workspace = true }
 pingora = { workspace = true, features = ["proxy"] }
+pingora-http = { workspace = true }
 serde = { workspace = true }
 toml = { workspace = true }
-tracing-subscriber = { workspace = true , features = ["fmt", "json", "env-filter"]}
+tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
+
