--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["snakeway"]
+members = ["snakeway", "wasm-devices"]
 resolver = "2"
 
 [profile.dev]
@@ -25,5 +25,7 @@ log = "0.4"
 pingora = "0.6"
 pingora-http = "0.6"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.145"
 toml = "0.9"
 tracing-subscriber = "0.3"
+wasmtime = "39.0"
