--- a/snakeway/Cargo.toml
+++ b/snakeway/Cargo.toml
@@ -15,4 +15,7 @@ pingora-http = { workspace = true }
 serde = { workspace = true }
 toml = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
+wasmtime = { workspace = true }
+serde_json = "1.0.145"
+
 
