Add wit-based WASM plugin system
1. Replace custom WASM plugin system with `wit-bindgen`-based architecture.
3. Remove `wasm-devices` crate, integrate WIT files into `snakeway-wit`, and update the device pipeline to use the new interface.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
 [workspace]
-members = ["snakeway", "wasm-devices"]
+members = ["snakeway"]
+default-members = ["snakeway"]
+exclude = [
+    "snakeway-wit",
+]
 resolver = "2"
 
 [profile.dev]
@@ -29,3 +33,4 @@ serde_json = "1.0.145"
 toml = "0.9"
 tracing-subscriber = "0.3"
 wasmtime = "39.0"
+wit-bindgen = "0.49"
