--- a/snakeway/Cargo.toml
+++ b/snakeway/Cargo.toml
@@ -3,19 +3,19 @@ name = "snakeway"
 version = "0.1.0"
 edition = "2024"
 
+
 [dependencies]
 anyhow = { workspace = true }
 async-trait = { workspace = true }
-bytes = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 http = { workspace = true }
 log = { workspace = true }
 pingora = { workspace = true, features = ["proxy"] }
 pingora-http = { workspace = true }
 serde = { workspace = true }
+serde_json = { workspace = true }
 toml = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
 wasmtime = { workspace = true }
-serde_json = "1.0.145"
 
 
