Update example config: add comment for device execution order

--- a/config/snakeway-example.toml
+++ b/config/snakeway-example.toml
@@ -4,6 +4,7 @@ listen = "0.0.0.0:8080"
 [[routes]]
 upstream = "127.0.0.1:3000"
 
+# Devices are loaded and executed top to bottom
 [[devices]]
 name = "example"
 type = "wasm"
