Squashed commit of the following:
commit 51cac6e88e3fbc4333bebfbe7a36be2de96ad2bd
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Sat Dec 13 11:09:52 2025 -0500

    Update example config: add comment for device execution order

commit 79e482e827496fa1e0a68d3c3ae91a56367bcb2d
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 12 22:41:03 2025 -0500

    Add device configuration support in `snakeway.toml`

    - Introduced `DeviceConfig` to support device definitions in configuration.
    - Added `load_from_config` method to `DeviceRegistry` for dynamic loading of devices from config.
    - Updated example configuration to include `wasm` and `builtin` device types.

commit 8277b7b479f54005b3ec772f44eadbd8e36c06ad
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 12 12:36:17 2025 -0500

    Cleanup wit module namespace

commit 1a9caba0648dc3349e7ee88799a942a18ea9e235
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 12 12:36:14 2025 -0500

    Cleanup wit module namespace

commit cd24e74619529b5d6d1101c1c041eee21d49a07f
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 12 12:24:34 2025 -0500

    Add wit-based WASM plugin system

    1. Replace custom WASM plugin system with `wit-bindgen`-based architecture.
    3. Remove `wasm-devices` crate, integrate WIT files into `snakeway-wit`, and update the device pipeline to use the new interface.

commit c203eaa7003058bb0c0e2251101914a10706d3fc
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Thu Dec 11 21:02:48 2025 -0500

    Prepare to add WASM devices

commit cc8f8af8df604781ffef271e0bf54a4aeced4671
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Thu Dec 11 20:51:21 2025 -0500

    Add proof of concept plugin

commit e967efac7d45c691c90f2f6ba06fa0c67e0c9325
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Thu Dec 11 17:59:14 2025 -0500

    Refactor

commit 6fd046c79e152fc752efd779cdb679e0142063c7
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Thu Dec 11 17:49:22 2025 -0500

    Add `Struct

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
 [workspace]
 members = ["snakeway"]
+default-members = ["snakeway"]
+exclude = [
+    "snakeway-wit",
+]
 resolver = "2"
 
 [profile.dev]
@@ -17,10 +21,16 @@ incremental = false         # Ensure no incremental compilation
 
 anyhow = "1.0"
 async-trait = "0.1"
+bytes = "1.11"
 clap = "4.5"
 config = "0.15"
+http = "1.4"
 log = "0.4"
 pingora = "0.6"
+pingora-http = "0.6"
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.145"
 toml = "0.9"
 tracing-subscriber = "0.3"
+wasmtime = "39.0"
+wit-bindgen = "0.49"
