--- a/snakeway/Cargo.toml
+++ b/snakeway/Cargo.toml
@@ -17,5 +17,6 @@ serde_json = { workspace = true }
 toml = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
 wasmtime = { workspace = true }
+wasmtime-wasi = { workspace = true, features = ["default"] }
 
 
