--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,12 +25,12 @@ bytes = "1.11"
 clap = "4.5"
 config = "0.15"
 http = "1.4"
-log = "0.4"
 pingora = "0.6"
 pingora-http = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.145"
 toml = "0.9"
+tracing = "0.1"
 tracing-subscriber = "0.3"
 wasmtime = "39.0"
 wasmtime-wasi = "39"
