--- a/snakeway/Cargo.toml
+++ b/snakeway/Cargo.toml
@@ -9,12 +9,12 @@ anyhow = { workspace = true }
 async-trait = { workspace = true }
 clap = { workspace = true, features = ["derive"] }
 http = { workspace = true }
-log = { workspace = true }
 pingora = { workspace = true, features = ["proxy"] }
 pingora-http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 toml = { workspace = true }
+tracing = {workspace = true}
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
 wasmtime = { workspace = true }
 wasmtime-wasi = { workspace = true, features = ["default"] }
