Add integration tests for basic proxy functionality using new `integration-tests` crate, update dependencies, and extend Justfile with `integration-test` task.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["snakeway"]
+members = ["integration-tests", "snakeway", "snakeway-core"]
 default-members = ["snakeway"]
 exclude = [
     "snakeway-wit",
