Add Basic static file serving

--- a/config/snakeway-example.toml
+++ b/config/snakeway-example.toml
@@ -6,6 +6,13 @@ listen = "0.0.0.0:8080"
 [[routes]]
 # Upstream service Snakeway proxies to
 upstream = "127.0.0.1:3000"
+path = "/"
+
+
+[[routes]]
+file_dir = "./public/assets"
+path = "/assets"
+index = false
 
 
 # ---------------------------------------------------------------------
