--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,10 +25,13 @@ bytes = "1.11"
 clap = "4.5"
 config = "0.15"
 http = "1.4"
+mime_guess = "2.0.5"
+percent-encoding = "2"
 pingora = "0.6"
 pingora-http = "0.6"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.145"
+tokio = "1.48.0"
 toml = "0.9"
 tracing = "0.1"
 tracing-subscriber = "0.3"
