--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -10,17 +10,28 @@ wasm = [
     "wasmtime-wasi",
 ]
 
+static_files = [
+    "bytes",
+    "mime_guess",
+    "tokio",
+    "percent-encoding"
+]
+
 [dependencies]
-clap = { workspace = true, features = ["derive"] }
 anyhow = { workspace = true }
 async-trait = { workspace = true }
+bytes = { workspace = true, optional = true }
+clap = { workspace = true, features = ["derive"] }
 http = { workspace = true }
+mime_guess = { workspace = true, optional = true }
 pingora = { workspace = true, features = ["proxy"] }
 pingora-http = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 toml = { workspace = true }
+tokio = { workspace = true, optional = true, features = ["fs"] }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true, features = ["fmt", "json", "env-filter"] }
 wasmtime = { workspace = true, optional = true }
 wasmtime-wasi = { workspace = true, optional = true, features = ["default"] }
+percent-encoding = { workspace = true, optional = true }
