Add conditional header handling for static file serving and implement ETag/Last-Modified support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,7 @@ bytes = "1.11"
 clap = "4.5"
 config = "0.15"
 http = "1.4"
+httpdate = "1.0"
 mime_guess = "2.0.5"
 percent-encoding = "2"
 pingora = "0.6"
