--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ async-trait = "0.1"
 bytes = "1.11"
 clap = "4.5"
 config = "0.15"
+flate2 = "1.0"
 http = "1.4"
 httpdate = "1.0"
 mime_guess = "2.0.5"
