--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -12,6 +12,7 @@ wasm = [
 
 static_files = [
     "bytes",
+    "flate2",
     "httpdate",
     "mime_guess",
     "tokio",
@@ -23,6 +24,7 @@ anyhow = { workspace = true }
 async-trait = { workspace = true }
 bytes = { workspace = true, optional = true }
 clap = { workspace = true, features = ["derive"] }
+flate2 = { workspace = true, optional = true }
 http = { workspace = true }
 httpdate = { workspace = true, optional = true }
 mime_guess = { workspace = true, optional = true }
