Feature/advanced static file server (#3)
* WIP add file streaming

* Optimize static file serving to load small files into memory for faster response times.

* ADd a 1mb image for testing purposes

* Replace vector allocation with fixed-size array for improved performance in file reading

* Increase `SMALL_FILE_THRESHOLD` to 256 KiB for improved static file handling performance

* Refactor static file streaming to use `BytesMut` for efficient buffer handling and allocation

* Format code to use BytesMut

* Add conditional header handling for static file serving and implement ETag/Last-Modified support

* Update comment formatting for clarity in `request_filter` function

* Refine `modified_since` logic to account for sub-second precision in HTTP date comparisons.

* Add gzip compression

* Add Brotli compression support for static file serving and update response logic

* Lower gzip compression threshold to 256 bytes for improved handling of small static files

* Update .gitignore to exclude /dev/ directory

* Add documentation for static file serving configuration and features

* Add documentation for static file serving configuration and features

* Make static file compression configuration per route

* Update docs with compression configuration info

* Refactor static file serving logic for clarity and concise error handling

Also, fixes linting issues.

* Refactor not_modified header logic for readability

* Autofix formatting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,10 +21,13 @@ incremental = false         # Ensure no incremental compilation
 
 anyhow = "1.0"
 async-trait = "0.1"
+brotli = "8"
 bytes = "1.11"
 clap = "4.5"
 config = "0.15"
+flate2 = "1.0"
 http = "1.4"
+httpdate = "1.0"
 mime_guess = "2.0.5"
 percent-encoding = "2"
 pingora = "0.6"
