Hammer out some integration test issues

--- a/integration-tests/fixtures/static.toml
+++ b/integration-tests/fixtures/static.toml
@@ -3,7 +3,7 @@ listen = "127.0.0.1:4041"
 
 [[routes]]
 path = "/"
-file_dir = "./public"
+file_dir = "./fixtures/public"
 index = true
 
 [[routes]]
