Disable directory listing in example configuration file

--- a/config/snakeway-example.toml
+++ b/config/snakeway-example.toml
@@ -15,6 +15,7 @@ path = "/"
 file_dir = "./public/"
 path = "/static"
 index = false
+directory_listing = false
 
 # Caching header settings for the above static file route.
 [routes.config]
