Add preliminary support for identity

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ config = "0.15"
 flate2 = "1.0"
 http = "1.4"
 httpdate = "1.0"
+maxminddb = "0.27"
 mime_guess = "2.0.5"
 percent-encoding = "2"
 pingora = "0.6"
@@ -39,6 +40,7 @@ tokio = "1.48.0"
 toml = "0.9"
 tracing = "0.1"
 tracing-subscriber = "0.3"
+uaparser = "0.6"
 wasmtime = "39.0"
 wasmtime-wasi = "39"
 wit-bindgen = "0.49"
