--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -8,3 +8,6 @@ reqwest = { version = "0.12", features = ["blocking"] }
 snakeway-core = { version = "*", path = "../snakeway-core", features = ["wasm", "static_files"] }
 tracing-subscriber = "0.3"
 tracing = "0.1"
+pretty_assertions = "1"
+serde_json = "1.0.145"
+once_cell = "1.21.3"
