--- a/integration-tests/fixtures/static_nondefault.toml
+++ b/integration-tests/fixtures/static_nondefault.toml
@@ -1,12 +1,12 @@
 [server]
-listen = "127.0.0.1:4041"
+listen = "{LISTEN_ADDR}"
+
+[[routes]]
+path = "/api"
+upstream = "{UPSTREAM_ADDR}"
 
 [[routes]]
 path = "/"
 file_dir = "./fixtures/public"
 index = true
 directory_listing = true
-
-[[routes]]
-path = "/api"
-upstream = "127.0.0.1:4000"
