Rework static file integration tests: replace commented-out cases with new `TestServer`-based tests and update fixture configuration

--- a/integration-tests/fixtures/static.toml
+++ b/integration-tests/fixtures/static.toml
@@ -5,6 +5,11 @@ listen = "{LISTEN_ADDR}"
 path = "/api"
 upstream = "{UPSTREAM_ADDR}"
 
+[[routes]]
+path = "/"
+file_dir = "./fixtures/public"
+
+
 [[devices]]
 name = "identity"
 kind = "builtin"
