--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2024"
 [dependencies]
 reqwest = { version = "0.12", features = ["blocking"] }
 snakeway-core = { version = "*", path = "../snakeway-core", features = ["wasm", "static_files"] }
-tracing-subscriber = "0.3"
-tracing = "0.1"
+tracing = { workspace = true }
+tracing-subscriber = { workspace = true }
+tempfile = "3.23.0"
