--- a/integration-tests/fixtures/basic.toml
+++ b/integration-tests/fixtures/basic.toml
@@ -1,7 +1,6 @@
 [server]
-listen = "0.0.0.0:4040"
-
+listen = "{LISTEN_ADDR}"
 
 [[routes]]
-upstream = "127.0.0.1:4000"
-path = "/"
+path = "/api"
+upstream = "{UPSTREAM_ADDR}"
