--- a/integration-tests/fixtures/identity.toml
+++ b/integration-tests/fixtures/identity.toml
@@ -1,10 +1,9 @@
 [server]
-listen = "0.0.0.0:4040"
-
+listen = "{LISTEN_ADDR}"
 
 [[routes]]
-upstream = "127.0.0.1:4000"
-path = "/"
+path = "/api"
+upstream = "{UPSTREAM_ADDR}"
 
 [[devices]]
 name = "identity"
@@ -12,14 +11,17 @@ kind = "builtin"
 builtin = "identity"
 enabled = true
 
-[devices.options]
 enable_geoip = true
-geoip_db = "data/geo_lite2_city/GeoLite2-City.mmdb"
+geoip_db = "fixtures/geoip/dbip-country-lite-2025-12.mmdb"
 enable_user_agent = true
 ua_engine = "woothee"
+trusted_proxies = []
 
 [[devices]]
 name = "access-log"
 kind = "builtin"
 builtin = "structured_logging"
 enabled = true
+
+include_identity = true
+identity_fields = ["country", "region", "asn", "device", "bot"]
