--- a/integration-tests/fixtures/static.toml
+++ b/integration-tests/fixtures/static.toml
@@ -1,12 +1,32 @@
 [server]
-listen = "127.0.0.1:4041"
+listen = "{LISTEN_ADDR}"
+
+[[routes]]
+path = "/api"
+upstream = "{UPSTREAM_ADDR}"
 
 [[routes]]
 path = "/"
 file_dir = "./fixtures/public"
-index = false
-directory_listing = false
 
-[[routes]]
-path = "/api"
-upstream = "127.0.0.1:4000"
+
+[[devices]]
+name = "identity"
+kind = "builtin"
+builtin = "identity"
+enabled = true
+
+enable_geoip = true
+geoip_db = "fixtures/geoip/dbip-country-lite-2025-12.mmdb"
+enable_user_agent = true
+ua_engine = "woothee"
+trusted_proxies = ["127.0.0.1/32"]
+
+[[devices]]
+name = "access-log"
+kind = "builtin"
+builtin = "structured_logging"
+enabled = true
+
+include_identity = true
+identity_fields = ["country", "region", "asn", "device", "bot"]
