--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,14 +22,17 @@ incremental = false         # Ensure no incremental compilation
 
 anyhow = "1.0"
 async-trait = "0.1"
+arc-swap = "1.7"
 brotli = "8"
 bytes = "1.11"
 clap = "4.5"
 config = "0.15"
+ctrlc = "3"
 flate2 = "1.0"
 http = "1.4"
 httpdate = "1.0"
 maxminddb = "0.27"
+nix = "0.30"
 mime_guess = "2.0.5"
 percent-encoding = "2"
 pingora = "0.6"
