Add optional `threads` configuration for server runtime customization
- Introduced `threads` field in `SnakewayConfig` to allow explicit control over worker threads.
- Updated server initialization logic to respect the `threads` setting.
- Enhanced documentation to explain `threads` usage, default behavior, and platform considerations.
- Updated example config to include `threads` usage.

--- a/config/snakeway-example.toml
+++ b/config/snakeway-example.toml
@@ -2,6 +2,16 @@
 # Address Snakeway listens on
 listen = "0.0.0.0:8080"
 pid_file = "/tmp/snakeway.pid"
+# Pingora worker threads.
+# If unset, Pingora decides how many threads to use.
+threads = 8
+
+
+[[routes]]
+# Upstream service Snakeway proxies to
+upstream = "127.0.0.1:3000"
+path = "/"
+
 
 [[routes]]
 # Upstream service Snakeway proxies to
