--- a/integration-tests/fixtures/config/static/routes/default.toml
+++ b/integration-tests/fixtures/config/static/routes/default.toml
@@ -4,6 +4,4 @@ service = "api"
 
 [[route]]
 path = "/"
-file_dir = "./public"
-index = "index.html"
-directory_listing = false
+file_dir = "./fixtures/public"
