--- a/integration-tests/fixtures/config/identity/devices/structured_logging.toml
+++ b/integration-tests/fixtures/config/identity/devices/structured_logging.toml
@@ -2,6 +2,8 @@
 name = "structured_logging"
 type = "builtin"
 builtin = "structured_logging"
+enabled = true
 
 [device.config]
 include_headers = true
+identity_fields = ["country", "region", "asn", "device", "bot"]
