--- a/integration-tests/fixtures/config/identity_trusted_proxy/devices/identity.toml
+++ b/integration-tests/fixtures/config/identity_trusted_proxy/devices/identity.toml
@@ -2,8 +2,11 @@
 name = "identity"
 type = "builtin"
 builtin = "identity"
+enabled = true
 
 [device.config]
-enable_geoip = false
-trusted_proxies = ["10.0.0.0/8"]
+enable_geoip = true
+geoip_db = "fixtures/geoip/dbip-country-lite-2025-12.mmdb"
+enable_user_agent = true
 ua_engine = "woothee"
+trusted_proxies = ["127.0.0.1/32"]
