--- a/config/snakeway.toml
+++ b/config/snakeway.toml
@@ -1,9 +1,9 @@
 [server]
 listen = "0.0.0.0:8080"
 threads = 4
-pid_file = "/var/run/snakeway.pid"
+pid_file = "/tmp/snakeway.pid"
 
 [include]
-routes = "config/routes/*.toml"
-services = "config/services/*.toml"
-devices = "config/devices/*.toml"
+routes = "routes/*.toml"
+services = "services/*.toml"
+devices = "devices/*.toml"
