--- a/config/snakeway.toml
+++ b/config/snakeway.toml
@@ -1,7 +1,11 @@
 [server]
-listen = "0.0.0.0:8080"
+listen = "127.0.0.1:8443"
 threads = 4
 pid_file = "/tmp/snakeway.pid"
+
+[server.tls]
+cert = "./snakeway.pem"
+key  = "./snakeway.key"
 
 [include]
 routes = "routes/*.toml"
