--- a/config/devices/structured_logging.toml
+++ b/config/devices/structured_logging.toml
@@ -3,6 +3,4 @@ name = "structured_logging"
 type = "builtin"
 builtin = "structured_logging"
 enabled = true
-
-[device.config]
-include_headers = true
+config = { include_headers = true }
