--- a/config/devices/identity.toml
+++ b/config/devices/identity.toml
@@ -3,8 +3,4 @@ name = "identity"
 type = "builtin"
 builtin = "identity"
 enabled = true
-
-[device.config]
-enable_geoip = false
-trusted_proxies = []
-ua_engine = "woothee"
+config = { enable_geoip = false, trusted_proxies = [], ua_engine = "woothee" }
