--- a/config/snakeway.toml
+++ b/config/snakeway.toml
@@ -8,7 +8,7 @@ addr = "127.0.0.1:8080"
 
 [[listener]]
 addr = "127.0.0.1:8443"
-tls = { cert = "./snakeway.pem", key = "./snakeway.key" }
+tls = { cert = "./data/certs/snakeway.pem", key = "./data/certs/snakeway.key" }
 
 [include]
 routes = "routes/*.toml"
