Refactor integration tests to support multi-listener configurations and enhance test reliability.

--- a/integration-tests/fixtures/config/basic/services/api.toml
+++ b/integration-tests/fixtures/config/basic/services/api.toml
@@ -4,3 +4,6 @@ strategy = "round_robin"
 
 [[service.upstream]]
 url = "http://127.0.0.1:9001"
+
+[[service.upstream]]
+url = "http://127.0.0.1:9002"
