--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -38,6 +38,7 @@ nix = { workspace = true, features = ["signal"] }
 percent-encoding = { workspace = true, optional = true }
 pingora = { workspace = true, features = ["proxy", "rustls"] }
 pingora-http = { workspace = true }
+rust-embed = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 toml = { workspace = true }
