Squashed commit of the following:
commit 3c0ed9a40f095b6fdac0922064d556635fdd8dda
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 26 15:32:24 2025 -0500

    Embed configuration templates and refactor `config init` to use embedded template files

commit baab7f9dd62eda1117b22c3e96efba8fdbce7ff9
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 26 15:09:19 2025 -0500

    Refactor integration tests to support multi-listener configurations and enhance test reliability.

commit e6ead34d437a657e70bf91880f64856bf79b05b9
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 26 14:22:00 2025 -0500

    Add `benchmark-proxy` recipe for performance testing with wrk and hey

commit 772998992c63b88a53523266c631a0e327dc4e4d
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 26 14:07:09 2025 -0500

    Add `setup-tls-dev-cert` recipe and update TLS file paths in config

    - Introduced `setup-tls-dev-cert` command to automate development TLS certificate generation using `mkcert`.
    - Updated `snakeway.toml` to reference new cert and key paths under `./data/certs/`.
    - Removed outdated `snakeway.key` and `snakeway.pem` files.

commit 55d87f2c6f7f568aaccdd594530df1822d104ac5
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 26 13:52:56 2025 -0500

    WIP TLS/validation

    1. Refactor server configuration to support multiple listeners with optional TLS.
    2. Migrate `listen` and `tls` fields to `listeners` array.
    3. Update validation, runtime, and configuration logic to reflect new structure.

commit 337402b87755cc39c6414a6bdda4c27fccd9a4d7
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 26 13:51:55 2025 -0500

    Update default server port to 3000 in upstream-js index file

commit 4cdd5bf4156c8ba6d5327bafb3f51742da8dbe39
Author: Ethan Hann <ethanhann@gmail.com>
Date:   Fri Dec 26 13:48:49 2025 -0500

    Add Express.js to upstream app, new route for user ID, and port configurability

commit 650372e860f1dd073c3d8f118272675f487

--- a/snakeway-core/Cargo.toml
+++ b/snakeway-core/Cargo.toml
@@ -36,8 +36,9 @@ maxminddb = { workspace = true, features = ["mmap"] }
 mime_guess = { workspace = true, optional = true }
 nix = { workspace = true, features = ["signal"] }
 percent-encoding = { workspace = true, optional = true }
-pingora = { workspace = true, features = ["proxy"] }
+pingora = { workspace = true, features = ["proxy", "rustls"] }
 pingora-http = { workspace = true }
+rust-embed = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 toml = { workspace = true }
