--- a/snakeway-core/config-templates/devices/structured_logging.toml
+++ b/snakeway-core/config-templates/devices/structured_logging.toml
@@ -3,4 +3,4 @@ name = "structured_logging"
 type = "builtin"
 builtin = "structured_logging"
 enabled = true
-config = { include_headers = true }
+config = { include_headers = false }
